# webcam-direct-linux

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: main.rs
src/access_point_ctl/wifi_manager/: hostapd_proc.rs  wpa_ctl.rs
src/app_data/: kv_db.rs  mod.rs
src/ble/: api.rs  ble_cmd_api.rs  ble_requester.rs  ble_server.rs  buffer_process.rs  comm_types.rs  mobile_buffer.rs  mobile_comm.rs  mod.rs  requester.rs
src/ble/ble_clients/: sdp_exchanger.rs
src/ble/clients/: gatt_uuids.rs  mobile_prop.rs  mod.rs  provisioner.rs  sdp_exchanger.rs
src/ble/server/: mobile_buffer.rs  mobile_comm.rs  mod.rs
src/vdevice_builder/: mod.rs  system_utils.rs  vdevice.rs  webrtc_pipeline.rs
