[package]
name = "webcam-direct-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.83"
bincode = "1.3.3"
bluer = { version = "0.17.3", features = ["full"] }
directories = "5.0.1"
env_logger = "0.11.4"
futures = "0.3.30"
gst = { version = "0.23.5", package = "gstreamer", features = ["v1_24"] }
gst-sdp = { version = "0.23.5", package = "gstreamer-sdp", features = ["v1_24"] }
gst-webrtc = { version = "0.23.5", package = "gstreamer-webrtc", features = ["v1_24"] }
gst-app = { version = "0.23.5", package = "gstreamer-app", features = ["v1_24"] }
hostname = "0.4.0"
log = "0.4.22"
neli = "0.6.4"
serde = "1.0.203"
serde_json = "1.0.117"
sled = { version = "0.34.7", features = ["compression"] }
tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = "0.1.16"
uuid = "1.10.0"
v4l = "0.14.0"
v4l2loopback = "0.1.0"
wpactrl = "0.5.1"
base64 = "0.22.1"
rmp-serde = "1.3.0"

[dev-dependencies]
mockall = "0.13.0"
